Removing unnecessary code, refactoring, resolving errors. Having inconsistencies with location services in my emulators so I am unsure it is the emulator or the code causing problems when the app first opens.

--- a/KnowYourGov3/app/src/main/res/layout/main_activity.xml
+++ b/KnowYourGov3/app/src/main/res/layout/main_activity.xml
@@ -24,7 +24,7 @@
         android:layout_height="0dp"
         android:background="@color/purple"
         android:paddingTop="5sp"
-        android:text="Chicago, IL, 60654"
+        android:text="Could Not Find Current Location"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/recyclerView"
