--- a/KnowYourGov3/app/src/main/res/layout/photo_activity.xml
+++ b/KnowYourGov3/app/src/main/res/layout/photo_activity.xml
@@ -23,7 +23,7 @@
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:text="TextView"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
@@ -46,16 +46,17 @@
 
     <ImageView
         android:id="@+id/officialImage"
-        android:layout_width="336dp"
-        android:layout_height="532dp"
+        android:layout_width="352dp"
+        android:layout_height="545dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:scaleType="fitCenter"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name" />
+        app:layout_constraintTop_toBottomOf="@+id/party" />
 
     <ImageView
         android:id="@+id/partyLogo"
